after changing z-index of research interests section, there was loss of functionality of anchor link in welcome news section. changing z-index to 4 on welcome section fixed the issue.

--- a/styles.css
+++ b/styles.css
@@ -248,7 +248,7 @@ img {
     /*min-width: 40vw;*/
     /*max-width: 40vw;*/
     background-color: white;
-    z-index: 2;
+    z-index: 4;
     overflow: hidden;
 }
 .welcomeSub {
